<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Настройка верхней границы -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <!-- Прокрутка вниз -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuideline">

        <!-- Настройка отступов по левому и правому краям -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10">

            <!-- ОСНОВНОЙ СПИСОК -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Раздел 1: АЛЛИГАТОРЫ -->

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/title"
                    android:gravity="center"
                    android:text="@string/alligator"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <!-- 1.1. Миссисипский аллигатор -->

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/mississippi_alligator" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mississippi_alligator"
                    android:textColor="@color/black" />

                <!-- 1.2. Китайский аллигатор -->

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/chinese_alligator" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/chinese_alligator"
                    android:textColor="@color/black" />

                <!-- Раздел 2: КАЙМАНЫ -->

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/title"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/caiman"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <!-- 2.1. Крокодиловый кайман -->

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/spectacled_caiman" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/spectacled_caiman"
                    android:textColor="@color/black" />

                <!-- 2.2. Широкомордый кайман -->

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/broad_snouted_caiman" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/broad_snouted_caiman"
                    android:textColor="@color/black" />

                <!-- 2.3. Парагвайский кайман -->

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/yacare_caiman" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/yacare_caiman"
                    android:textColor="@color/black" />

                <!-- 2.4. Гладколобый кайман -->

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/cuvier_s_dwarf_caiman" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/сuviers_dwarf_caiman"
                    android:textColor="@color/black" />

                <!-- 2.5. Гладколобый кайман Шнайдера -->

                <ImageView
                    android:id="@+id/imageView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/smooth_fronted_caiman" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/smooth_fronted_caiman"
                    android:textColor="@color/black" />

                <!-- 2.6. Черный кайман -->

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/black_caiman" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/black_caiman"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>